--- a/index/Tpl/Index/part2.html
+++ b/index/Tpl/Index/part2.html
@@ -143,217 +143,6 @@ $(function() {
                   </tr>
                         </eq>
                   </volist>
-                  <!--
-                  <tr>
-                    <td height="145" align="center" valign="middle">
-                    	<ul class="praisebox">
-                            <li class="color4">
-                                <div class="info">
-                                	美美的风景溶为一体，不分彼此。知道下面那一款相机应用具有双重曝光的功能么？
-                                    <div class="tishi">
-                                        <dt></dt>
-                                        <dd>
-                                            <a href="#"><img src="__PUBLIC__/Index3/images/img_user.jpg" /></a>
-                                            <h2>张三</h2>
-                                            <P>想当，年金戈铁马；看今朝，死缠烂打</P>
-                                        </dd>
-
-                                    </div>
-                                </div>
-                                <div class="btn_praise"><a href="http://widget.weibo.com/dialog/PublishWeb.php?mid=Akl37wvpO&uid=1652987982&refer=y&tag=8%E4%B8%8D%E5%A4%9F%E5%A4%9A1%E7%82%B9&language=zh_cn&button=forward" target="_blank">125</a></div>
-                            </li>
-                            <li class="color5">
-                                <div class="info">
-                                	美美的风景溶为一体，不分彼此。知道下面那一款相机应用具有双重曝光的功能么？
-                                    <div class="tishi">
-                                        <dt></dt>
-                                        <dd>
-                                            <a href="#"><img src="__PUBLIC__/Index3/images/img_user.jpg" /></a>
-                                            <h2>张三</h2>
-                                            <P>想当，年金戈铁马；看今朝，死缠烂打</P>
-                                        </dd>
-
-                                    </div>
-                                </div>
-                                <div class="btn_praise"><a href="http://widget.weibo.com/dialog/PublishWeb.php?mid=Akl37wvpO&uid=1652987982&refer=y&tag=8%E4%B8%8D%E5%A4%9F%E5%A4%9A1%E7%82%B9&language=zh_cn&button=forward" target="_blank">125</a></div>
-                            </li>
-                            <li class="color6">
-                                <div class="info">
-                                	美美的风景溶为一体，不分彼此。知道下面那一款相机应用具有双重曝光的功能么？
-                                    <div class="tishi">
-                                        <dt></dt>
-                                        <dd>
-                                            <a href="#"><img src="__PUBLIC__/Index3/images/img_user.jpg" /></a>
-                                            <h2>张三</h2>
-                                            <P>想当，年金戈铁马；看今朝，死缠烂打</P>
-                                        </dd>
-
-                                    </div>
-                                </div>
-                                <div class="btn_praise"><a href="http://widget.weibo.com/dialog/PublishWeb.php?mid=Akl37wvpO&uid=1652987982&refer=y&tag=8%E4%B8%8D%E5%A4%9F%E5%A4%9A1%E7%82%B9&language=zh_cn&button=forward" target="_blank">125</a></div>
-                            </li>
-                        </ul>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td height="145" align="center" valign="middle">
-                        <ul class="praisebox">
-                            <li class="color1">
-                                <div class="info">
-                                	美美的风景溶为一体，不分彼此。知道下面那一款相机应用具有双重曝光的功能么？
-                                    <div class="tishi">
-                                        <dt></dt>
-                                        <dd>
-                                            <a href="#"><img src="__PUBLIC__/Index3/images/img_user.jpg" /></a>
-                                            <h2>张三</h2>
-                                            <P>想当，年金戈铁马；看今朝，死缠烂打</P>
-                                        </dd>
-
-                                    </div>
-                                </div>
-                                <div class="btn_praise"><a href="http://widget.weibo.com/dialog/PublishWeb.php?mid=Akl37wvpO&uid=1652987982&refer=y&tag=8%E4%B8%8D%E5%A4%9F%E5%A4%9A1%E7%82%B9&language=zh_cn&button=forward" target="_blank">125</a></div>
-
-                            </li>
-                            <li class="color2">
-                                <div class="info">
-                                	美美的风景溶为一体，不分彼此。知道下面那一款相机应用具有双重曝光的功能么？
-                                    <div class="tishi">
-                                        <dt></dt>
-                                        <dd>
-                                            <a href="#"><img src="__PUBLIC__/Index3/images/img_user.jpg" /></a>
-                                            <h2>张三</h2>
-                                            <P>想当，年金戈铁马；看今朝，死缠烂打</P>
-                                        </dd>
-
-                                    </div>
-                                </div>
-                                <div class="btn_praise"><a href="http://widget.weibo.com/dialog/PublishWeb.php?mid=Akl37wvpO&uid=1652987982&refer=y&tag=8%E4%B8%8D%E5%A4%9F%E5%A4%9A1%E7%82%B9&language=zh_cn&button=forward" target="_blank">125</a></div>
-                            </li>
-                            <li class="color3">
-                                <div class="info">
-                                	美美的风景溶为一体，不分彼此。知道下面那一款相机应用具有双重曝光的功能么？
-                                    <div class="tishi">
-                                        <dt></dt>
-                                        <dd>
-                                            <a href="#"><img src="__PUBLIC__/Index3/images/img_user.jpg" /></a>
-                                            <h2>张三</h2>
-                                            <P>想当，年金戈铁马；看今朝，死缠烂打</P>
-                                        </dd>
-
-                                    </div>
-                                </div>
-                                <div class="btn_praise"><a href="http://widget.weibo.com/dialog/PublishWeb.php?mid=Akl37wvpO&uid=1652987982&refer=y&tag=8%E4%B8%8D%E5%A4%9F%E5%A4%9A1%E7%82%B9&language=zh_cn&button=forward" target="_blank">125</a></div>
-                            </li>
-
-                        </ul>
-                         </td>
-                  </tr>
-
-                  <tr>
-                    <td height="145" align="center" valign="middle">
-                    	<ul class="praisebox">
-                            <li class="color4">
-                                <div class="info">
-                                	美美的风景溶为一体，不分彼此。知道下面那一款相机应用具有双重曝光的功能么？
-                                    <div class="tishi">
-                                        <dt></dt>
-                                        <dd>
-                                            <a href="#"><img src="__PUBLIC__/Index3/images/img_user.jpg" /></a>
-                                            <h2>张三</h2>
-                                            <P>想当，年金戈铁马；看今朝，死缠烂打</P>
-                                        </dd>
-
-                                    </div>
-                                </div>
-                                <div class="btn_praise"><a href="http://widget.weibo.com/dialog/PublishWeb.php?mid=Akl37wvpO&uid=1652987982&refer=y&tag=8%E4%B8%8D%E5%A4%9F%E5%A4%9A1%E7%82%B9&language=zh_cn&button=forward" target="_blank">125</a></div>
-                            </li>
-                            <li class="color5">
-                                <div class="info">
-                                	美美的风景溶为一体，不分彼此。知道下面那一款相机应用具有双重曝光的功能么？
-                                    <div class="tishi">
-                                        <dt></dt>
-                                        <dd>
-                                            <a href="#"><img src="__PUBLIC__/Index3/images/img_user.jpg" /></a>
-                                            <h2>张三</h2>
-                                            <P>想当，年金戈铁马；看今朝，死缠烂打</P>
-                                        </dd>
-
-                                    </div>
-                                </div>
-                                <div class="btn_praise"><a href="http://widget.weibo.com/dialog/PublishWeb.php?mid=Akl37wvpO&uid=1652987982&refer=y&tag=8%E4%B8%8D%E5%A4%9F%E5%A4%9A1%E7%82%B9&language=zh_cn&button=forward" target="_blank">125</a></div>
-                            </li>
-                            <li class="color6">
-                                <div class="info">
-                                	美美的风景溶为一体，不分彼此。知道下面那一款相机应用具有双重曝光的功能么？
-                                    <div class="tishi">
-                                        <dt></dt>
-                                        <dd>
-                                            <a href="#"><img src="__PUBLIC__/Index3/images/img_user.jpg" /></a>
-                                            <h2>张三</h2>
-                                            <P>想当，年金戈铁马；看今朝，死缠烂打</P>
-                                        </dd>
-
-                                    </div>
-                                </div>
-                                <div class="btn_praise"><a href="http://widget.weibo.com/dialog/PublishWeb.php?mid=Akl37wvpO&uid=1652987982&refer=y&tag=8%E4%B8%8D%E5%A4%9F%E5%A4%9A1%E7%82%B9&language=zh_cn&button=forward" target="_blank">125</a></div>
-                            </li>
-                        </ul>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td height="145" align="center" valign="middle">
-                        <ul class="praisebox">
-                            <li class="color1">
-                                <div class="info">
-                                	美美的风景溶为一体，不分彼此。知道下面那一款相机应用具有双重曝光的功能么？
-                                    <div class="tishi">
-                                        <dt></dt>
-                                        <dd>
-                                            <a href="#"><img src="__PUBLIC__/Index3/images/img_user.jpg" /></a>
-                                            <h2>张三</h2>
-                                            <P>想当，年金戈铁马；看今朝，死缠烂打</P>
-                                        </dd>
-
-                                    </div>
-                                </div>
-                                <div class="btn_praise"><a href="http://widget.weibo.com/dialog/PublishWeb.php?mid=Akl37wvpO&uid=1652987982&refer=y&tag=8%E4%B8%8D%E5%A4%9F%E5%A4%9A1%E7%82%B9&language=zh_cn&button=forward" target="_blank">125</a></div>
-
-                            </li>
-                            <li class="color2">
-                                <div class="info">
-                                	美美的风景溶为一体，不分彼此。知道下面那一款相机应用具有双重曝光的功能么？
-                                    <div class="tishi">
-                                        <dt></dt>
-                                        <dd>
-                                            <a href="#"><img src="__PUBLIC__/Index3/images/img_user.jpg" /></a>
-                                            <h2>张三</h2>
-                                            <P>想当，年金戈铁马；看今朝，死缠烂打</P>
-                                        </dd>
-
-                                    </div>
-                                </div>
-                                <div class="btn_praise"><a href="http://widget.weibo.com/dialog/PublishWeb.php?mid=Akl37wvpO&uid=1652987982&refer=y&tag=8%E4%B8%8D%E5%A4%9F%E5%A4%9A1%E7%82%B9&language=zh_cn&button=forward" target="_blank">125</a></div>
-                            </li>
-                            <li class="color3">
-                                <div class="info">
-                                	美美的风景溶为一体，不分彼此。知道下面那一款相机应用具有双重曝光的功能么？
-                                    <div class="tishi">
-                                        <dt></dt>
-                                        <dd>
-                                            <a href="#"><img src="__PUBLIC__/Index3/images/img_user.jpg" /></a>
-                                            <h2>张三</h2>
-                                            <P>想当，年金戈铁马；看今朝，死缠烂打</P>
-                                        </dd>
-
-                                    </div>
-                                </div>
-                                <div class="btn_praise"><a href="http://widget.weibo.com/dialog/PublishWeb.php?mid=Akl37wvpO&uid=1652987982&refer=y&tag=8%E4%B8%8D%E5%A4%9F%E5%A4%9A1%E7%82%B9&language=zh_cn&button=forward" target="_blank">125</a></div>
-                            </li>
-
-                        </ul>
-                         </td>
-                  </tr>
--->
                   </table>
                   </div>
                   <script type="text/javascript">
@@ -361,7 +150,7 @@ $(function() {
                 new Marquee("MarqueeDiv",0,1,430,290,30,0,0)
                 </script>
                 <div class="clear10"></div>
-                <a href="http://widget.weibo.com/dialog/PublishWeb.php?app_src=w8ffy&default_text=%23%E5%85%ABWindows%E5%A4%9A%E4%B8%80%E7%82%B9%23+%E5%AF%B9%E4%BA%8EWindows+8.1%EF%BC%8C%E4%BD%A0%E4%BB%AC%E4%B8%80%E5%AE%9A%E4%B9%9F%E6%9C%89%E4%B8%8D%E5%B0%91%E5%A5%BD%E5%A5%87%E5%90%A7%EF%BC%8C%E5%BF%AB%E6%9D%A5%E5%8F%91%E8%A1%A8%E8%AF%9D%E9%A2%98%EF%BC%8C%E6%9C%89%E6%9C%BA%E4%BC%9A%E8%AE%A9%E5%90%8D%E4%BA%BA%E7%94%A8%E4%BD%A0%E7%9A%84%E8%AF%9D%E9%A2%98%E6%8B%8D%E8%A7%86%E9%A2%91%E5%93%A6%EF%BC%81%E6%88%91%E5%85%88%E5%88%86%E4%BA%AB%E6%88%91%E7%9A%84%E5%A5%BD%E5%A5%87%EF%BC%9Ahttp%3A%2F%2Ft.cn%2F8kqsEtQ&language=zh_cn&button=pubilish&app" class="btn_wybyx" target="_blank"></a>
+                <a href="http://widget.weibo.com/dialog/PublishWeb.php?app_src=w8ffy&default_text=%23%E5%85%ABWindows%E5%A4%9A%E4%B8%80%E7%82%B9%23+http%3A%2F%2Ft.cn%2F8kqsEtQ&language=zh_cn&button=pubilish&app" class="btn_wybyx" target="_blank"></a>
                 <div class="clear10"></div>
                 <div class="btn_foot">
                     <a href="javascript:void(0);" id="one1" onclick="setTab('one',1,2);return false;">活动规则</a><a href="javascript:void(0);" id="one2" onclick="setTab('one',2,2);return false;">奖品设置</a>
