再次向胜利迈进

--- a/index/Tpl/Index/part2.html
+++ b/index/Tpl/Index/part2.html
@@ -105,6 +105,7 @@ $(function() {
             	<ul class="tab">
                 	<li><a href="#" class="nav1"></a></li>
                     <li><a href="__URL__/part3" class="nav2"></a></li>
+                    <li style="margin: 8px 0 0 0;"><a href="http://huati.weibo.com/k/%E5%85%ABWindows%E5%A4%9A%E4%B8%80%E7%82%B9" target="_blank" style="color: #ffffff;">查看全部话题</a></li>
                 </ul>
 				<div class="clear"></div>
                 <div id="MarqueeDiv" style="width:430px; height:290px;overflow:hidden;">
