--- a/admin/Tpl/Public/menu.html
+++ b/admin/Tpl/Public/menu.html
@@ -1,7 +1,7 @@
 <div class="accordion" fillSpace="sideBar">
 
   <div class="accordionHeader">
-    <h2><span>Folder</span>PhaseI - 内容管理</h2>
+    <h2><span>Folder</span>内容管理</h2>
   </div>
 
   <div class="accordionContent">
@@ -10,14 +10,6 @@
     </ul>
   </div>
 
-  <div class="accordionHeader">
-    <h2><span>Folder</span>PhaseII - 内容管理</h2>
-  </div>
-
-  <div class="accordionContent">
-    <ul class="tree treeFolder">
-    </ul>
-  </div>
 
 
 </div>
