--- a/index/Tpl/Index/part3.html
+++ b/index/Tpl/Index/part3.html
@@ -146,5 +146,8 @@ $(function() {
           </div>
     </div>
 </div>
+<div style="display: none;">
+    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5763296'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s17.cnzz.com/stat.php%3Fid%3D5763296' type='text/javascript'%3E%3C/script%3E"));</script>
+</div>
 </body>
 </html>
