--- a/index/Tpl/Index/part2.html
+++ b/index/Tpl/Index/part2.html
@@ -180,7 +180,7 @@ $(function() {
                             <li class="gz1">知道Windows8全新的modern风格吗？</li>
                             <li class="gz1">知道升级到Windows8.1了吗？</li>
                             <li class="gz1">Windows8.1将带给你多1点体验，多1点惊喜！</li>
-                            <li class="gz1">发布话题告诉我们你对Windows8.1的了解，期待你多一点的态度，多一点的思索。话题点赞量高的参与者将获得微软准备的精致奖品，更有名人为你拍摄专属视频。给你感兴趣的话题点赞，也会有精致礼品送出哦！</li>
+                            <li class="gz1">发布话题八一八你对Windows 8.1的一点了解，一点期待吧。话题点赞量高的参与者将获得微软限量版奖品哦，更有名人为你拍摄专属视频。给你感兴趣的话题点赞，也有精致礼品相送哦！</li>
                         </ul>
                     </div>
                 </div>
