--- a/index/Tpl/Index/part2.html
+++ b/index/Tpl/Index/part2.html
@@ -9,7 +9,7 @@
     <script src="http://js.t.sinajs.cn/t4/enterprise/js/public/appframe/appClient.js" type="text/javascript" charset="utf-8"></script>
     <script src="http://js.t.sinajs.cn/t4/enterprise/js/public/appframe/client.js" type="text/javascript"></script>
 <script type="text/javascript" src="__PUBLIC__/Index3/javascript/jquery.js"></script>
-<script src="__PUBLIC__/Index3/javascript/MSClass.js" type="text/javascript"></script>
+<script src="__PUBLIC__/Index3/javascript/MSClass2.85.js" type="text/javascript"></script>
 <script type="text/javascript">
 
     //点击按钮收缩展开
