增加后台 编辑 点赞量的 功能

--- a/admin/Tpl/Phaseone/topic.html
+++ b/admin/Tpl/Phaseone/topic.html
@@ -21,7 +21,8 @@
 	  <ul class="toolBar">
 	    <li class=""><a class="add" href="__APP__/Phaseone/getshare/navTabId/phaseone_topic" target="ajaxTodo"><span>获取数据</span></a></li>
 	    <li class=""><a class="delete" href="__APP__/Phaseone/delshare/navTabId/phaseone_topic" posttype="string" rel="ids" target="selectedTodo" title="确实要删除这些记录吗?" warn="请选择记录"><span>删除</span></a></li>
-		</ul>
+          <li><a class="edit" href="__APP__/Phaseone/editshare/id/{sid_role}" target="dialog" mask="true" warn="请选择数据"><span>编辑</span></a></li>
+      </ul>
 	</div>
 
 	<table class="table" width="100%" layoutH="138">
