--- a/index/Tpl/Index/part4.html
+++ b/index/Tpl/Index/part4.html
@@ -114,15 +114,12 @@ $(function() {
                 <div class="mingdan">
                 	<div class="md_title"></div>
 
-                    <div id="MarqueeDiv" style="width:420px; height:80px;overflow:hidden;">
+                    <div id="MarqueeDiv" style="width:420px; height:100px;overflow:hidden;">
                         <table width="420" border="0" cellspacing="0" cellpadding="0" align="center">
                             <tr>
-                                <td height="40" align="center" valign="middle">
+                                <td height="20" align="center" valign="middle">
                                     <ul class="md_con">
-                                        <li><a href="#"><img src="__UPLOAD__/img_w2.jpg" /><div>暖小团</div></a></li>
-                                        <li><a href="#"><img src="__UPLOAD__/img_w2.jpg" /><div>暖小团</div></a></li>
-                                        <li><a href="#"><img src="__UPLOAD__/img_w2.jpg" /><div>暖小团</div></a></li>
-                                        <li><a href="#"><img src="__UPLOAD__/img_w2.jpg" /><div>暖小团</div></a></li>
+                                        <li class="second"></li>
                                     </ul>
                                 </td>
                             </tr>
@@ -139,6 +136,33 @@ $(function() {
                             <tr>
                                 <td height="40" align="center" valign="middle">
                                     <ul class="md_con">
+                                        <li><a href="#"><img src="__UPLOAD__/img_w2.jpg" /><div>暖小团</div></a></li>
+                                        <li><a href="#"><img src="__UPLOAD__/img_w2.jpg" /><div>暖小团</div></a></li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td height="20" align="center" valign="middle">
+                                    <ul class="md_con">
+                                        <li class="third"></li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td height="40" align="center" valign="middle">
+                                    <ul class="md_con">
+
+                                        <li><a href="#"><img src="__UPLOAD__/img_w2.jpg" /><div>暖小团</div></a></li>
+                                        <li><a href="#"><img src="__UPLOAD__/img_w2.jpg" /><div>暖小团</div></a></li>
+                                        <li><a href="#"><img src="__UPLOAD__/img_w2.jpg" /><div>暖小团</div></a></li>
+                                        <li><a href="#"><img src="__UPLOAD__/img_w2.jpg" /><div>暖小团</div></a></li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td height="40" align="center" valign="middle">
+                                    <ul class="md_con">
+
                                         <li><a href="#"><img src="__UPLOAD__/img_w2.jpg" /><div>暖小团</div></a></li>
                                         <li><a href="#"><img src="__UPLOAD__/img_w2.jpg" /><div>暖小团</div></a></li>
                                         <li><a href="#"><img src="__UPLOAD__/img_w2.jpg" /><div>暖小团</div></a></li>
@@ -148,9 +172,10 @@ $(function() {
                             </tr>
                         </table>
                     </div>
+
                     <script type="text/javascript">
                         /*********向上连续滚动及鼠标拖动***************/
-                        new Marquee("MarqueeDiv",0,1,420,80,30,0,0)
+                        new Marquee("MarqueeDiv",0,1,420,100,30,0,0)
                     </script>
 
 
