--- a/index/Tpl/Index/part2.html
+++ b/index/Tpl/Index/part2.html
@@ -165,7 +165,7 @@ $(function() {
         <div class="clear"></div>
 
         <div class="clear5"></div>
-                <a href="http://widget.weibo.com/dialog/PublishWeb.php?app_src=w8ffy&default_text=%23%E5%85%ABWindows%E5%A4%9A%E4%B8%80%E7%82%B9%23+http%3A%2F%2Ft.cn%2F8kqsEtQ&language=zh_cn&button=pubilish&app" class="btn_wybyx" target="_blank"></a>
+                <a onclick="alert('感谢您的参与！征集话题活动已经结束啦！敬请期待12月30日公布中奖名单，以及1月8日出炉的名人视频吧~');" class="btn_wybyx" target="_blank"></a>
                 <div class="clear10"></div>
                 <div class="btn_foot">
                     <a href="javascript:void(0);" id="one1" onclick="setTab('one',1,2);return false;">活动规则</a><a href="javascript:void(0);" id="one2" onclick="setTab('one',2,2);return false;">奖品设置</a>
