添加统计代码

--- a/index/Tpl/Index/part4.html
+++ b/index/Tpl/Index/part4.html
@@ -605,6 +605,9 @@ $(function() {
             <a target="_blank" href="http://appserver.lenovo.com.cn/lenovo_product_Detail.aspx?gdsid=A2100021256" class="item8"><img src="__PUBLIC__/Index3/images/n8.jpg"><div class="mask"></div></a>
         </div>
     </div>
+    <div style="display: none;">
+        <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5780785'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/stat.php%3Fid%3D5780785' type='text/javascript'%3E%3C/script%3E"));</script>
+    </div>
 </div>
 </body>
 </html>
