--- a/index/Tpl/Index/part4.html
+++ b/index/Tpl/Index/part4.html
@@ -84,10 +84,10 @@ $(function() {
                 </ul>
 				<div class="clear10"></div>
 				<div class="jiangpin">
-                    <P>感谢所有参与Windows系统话题征集的朋友，最终话题终于出炉了！</P>
-                    <P>一等奖：最终被点赞最多的4个话题的提供者，将获得微软限量版精致鼠标</P>
-                    <P>二等奖：最终被点赞排名第5-10名的6个话题的提供者，将获得微软精致双肩背包</P>
-                    <P>三等奖：随机抽取150名参与话题征集的网友，送上微软限量版精美冰箱贴</P>
+                    <P>感谢所有参与Windows系统话题征集的朋友，最终获奖名单出炉了！</P>
+                    <P>一等奖：微软限量版鼠标</P>
+                    <P>二等奖：微软特别定制双肩背包</P>
+                    <P>三等奖：微软限量版精美冰箱贴</P>
                 </div>
                 <div class="clear15"></div>
                 <div class="eightitle"></div>
@@ -100,21 +100,45 @@ $(function() {
                         <div><img src="http://tp3.sinaimg.cn/1856612134/50/5627593518/0"></div>
                         <div><a href="http://weibo.com/gaomanxiu" style="color: #ffffff;" target="_blank">gaomanxiu</a></div>
                         <a class="icon_z">286</a>
+                        <div class="tishi">
+                            <dt></dt>
+                            <dd>
+                                <P><a>#八Windows多一点# http://t.cn/8kqsEtQ 一边学习Win 8.1 一边抱怨：“这个功能还是Win 7 好！” 可是当一周过去，你会发现自己已经习惯了Win 8.1 的设置。就这样，我们被改变着也在进步着。现在我的大脑已经可以自如地在大脑里切换Win8.1 和 Win7 了</a></P>
+                            </dd>
+                        </div>
                     </li>
                     <li class="c2">
                         <div><img src="http://tp3.sinaimg.cn/1274608414/50/5657080587/1"></div>
                         <div><a href="http://weibo.com/xinyang2121" style="color: #ffffff;" target="_blank">海豚新鲜事</a></div>
                         <a class="icon_z">258</a>
+                        <div class="tishi">
+                            <dt></dt>
+                            <dd>
+                                <P><a>Windows 8.1可以让开始屏幕自动继承桌面壁纸，让开始和桌面切换起来更加协调。可以根据图标主色智能决定磁贴的背景色彩, 加入了对高分屏的支持!因为很喜欢小磁贴，颜色可以根据自己的喜好随意更改，所以手机都是用Windows phone8系统的手机！@微软Windows http://t.cn/8kqsEtQ</a></P>
+                            </dd>
+                        </div>
                     </li>
                     <li class="c3">
                         <div><img src="http://tp1.sinaimg.cn/1969143292/50/5683085209/1"></div>
                         <div><a href="http://weibo.com/u/1969143292" style="color: #ffffff;font-size: 12px;" target="_blank">Hurricanecover</a></div>
                         <a class="icon_z">212</a>
+                        <div class="tishi">
+                            <dt></dt>
+                            <dd>
+                                <P><a>#八Windows多一点# 电脑win8.1，平板surface是win8.1 rt，手机是wp7.8，三屏一云的统一，微软账号，skydrive打通三屏，让我的数据资料无处不在。高度统一又个性化的morden ui，特备是win8.1后开始界面的大中小宽四种尺寸的大小更是向手机看齐了。@微软Windows http://t.cn/8kqsEtQ</a></P>
+                            </dd>
+                        </div>
                     </li>
                     <li class="c4">
                         <div><img src="http://tp3.sinaimg.cn/2832171422/50/5634507590/1"></div>
                         <div><a href="http://weibo.com/u/2832171422" style="color: #ffffff;" target="_blank">草莓雪_宝贝</a></div>
                         <a class="icon_z">211</a>
+                        <div class="tishi ts2">
+                            <dt></dt>
+                            <dd>
+                                <P><a>#八Windows多一点# http://t.cn/8kqsEtQ升级到windows8.1, 特别喜欢健康和美食这两个应用</a></P>
+                            </dd>
+                        </div>
                     </li>
                 </ul>
                 <div class="clear10"></div>
